<resources>
    <string name="app_name">Task Timer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>

    <string name="menutitle_addTask">Add Task</string>
    <string name="menutitle_showDurations">Durations Report</string>
    <string name="menutitle_settings">Settings</string>
    <string name="menutitle_showAbout">About TaskTimer</string>
    <string name="menutitle_generate">Generate data</string>
    <string name="no_task_message">No Task being timed</string>
    <string name="edit_button_description">Button to edit a task details</string>
    <string name="delete_button_description">Button to delete a task</string>
    <string name="addeditNameHint">Task name: required</string>
    <string name="addeditDescriptionHint">Task description (optional)</string>
    <string name="addeditSortHint">Order: sorts low to high</string>
    <string name="addeditSaveText">Save</string>
    <string name="instruction_heading">instructions</string>
    <string name="description_heading">Use the add button (+) in the toolbar above to create new tasks. \n\nTasks with lower sort orders will be placed higher up the list. Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).\n\nEach task has an edit button if you want to change the details.\n\nSwipe a task left to delete it.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="cancelEditDialog_message">Abandon changes</string>
    <string name="cancelEDitDiag_positive_caption">Continue editing</string>
    <string name="cancelEditDialog_mess">You have unsaved changes. Do you want to abandon your changes, or continue editing?</string>
    <string name="floating_button">Floating button</string>
    <string name="about_copyright">Copyright © 2020 sebasorozcob.com</string>
    <string name="about_weblink">Instructions available at www.sebasorozcob.com</string>
    <string name="about_email">For support , email tasktimer@learnprogramming.com</string>
    <string name="about_credits">Icon derived from <b>analog clock</b> at openclipart.org by <b>Anonymous</b></string>
    <string name="about_url_error">No browser application found, cannot visit world-wide web</string>
    <string name="timing_message">Currently timing %1$s</string>
    <string name="td_text_name">Task name</string>
    <string name="td_text_date">Date</string>
    <string name="td_text_duration">Duration</string>
    <string name="td_text_description">Description</string>
    <string name="title_activity_durations_report">DurationsReport</string>
    <string name="rm_title_filter_day">Show day</string>
    <string name="rm_title_filter_week">Show week</string>
    <string name="rm_title_filter_date">Set report date</string>
    <string name="rm_title_delete">Delete old timings</string>
    <string name="date_title_filter">Select date for report</string>
    <string name="date_title_delete">Select the date to delete up to</string>
    <string name="delete_timings_message">Are you sure you want to delete all timings before %1$s</string>
    <string name="delete_edited_task">You can\'t delete the task that\'s being edited</string>
</resources>